# aruco

./: .gitlab-ci.yml  CMakeLists.txt  ChangeLog.md  PortingManual.md  README.md  _clang-format
src/: CMakeLists.txt  ar_omp.h  aruco.h  arucofidmarkers.cpp  arucofidmarkers.h  board.cpp  board.h  boarddetector.cpp  boarddetector.h  cameraparameters.cpp  cameraparameters.h  chromaticmask.cpp  chromaticmask.h  cvdrawingutils.cpp  cvdrawingutils.h  exports.h  highlyreliablemarkers.cpp  highlyreliablemarkers.h  marker.cpp  marker.h  markerdetector.cpp  markerdetector.h  serialization.cpp  serialization.h  subpixelcorner.cpp  subpixelcorner.h  utils.cpp  utils.h
test/: CMakeLists.txt  core_tests.cpp  filestorage_adapter.h  perf_tests.cpp  test.h
testdata/board/: chessBoard-expected.yml  defaultBoard-expected.yml  expected.yml  expected_gl.yml  frameBoard-expected.yml
testdata/chessboard/: expected.yml
testdata/hrm/: expected.yml  intrinsics.yml
testdata/hrm/boards/: board4x4.yml
testdata/hrm/dictionaries/: expected.yml
testdata/hrm_dictionaries/: d5x5_100.yml  d7x7_100.yml  d8x8_100.yml
testdata/mask/: aruco.yml
testdata/single/: expected.yml
testsdata/: README.md
testsdata/hrm_dictionaries/: d4x4_100.yml  d6x6_100.yml
testsdata/mask/: board_meters.yml  dictionary.yml
utils/: CMakeLists.txt  aruco_board_pix2meters.cpp  aruco_calibration.cpp  aruco_create_board.cpp  aruco_create_marker.cpp  aruco_selectoptimalmarkers.cpp  aruco_simple.cpp  aruco_simple_board.cpp  aruco_test.cpp  aruco_test_board.cpp  aruco_test_board_gl.cpp  aruco_test_board_gl_mask.cpp  aruco_test_board_mask.cpp  aruco_test_board_stability.cpp  aruco_test_gl.cpp  common.h
utils_hrm/: aruco_hrm_create_board.cpp  aruco_hrm_create_dictionary.cpp  aruco_hrm_test.cpp  aruco_hrm_test_board.cpp
